--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-bcrypt==3.2.0
-cffi==1.14.5
-cryptography==3.4.7
-paramiko==2.7.2
-Pillow==8.2.0
-pycparser==2.20
-PyNaCl==1.4.0
-PyQt5==5.15.4
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.0
-six==1.16.0
+asgiref==3.5.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+dj-database-url==0.5.0
+Django==4.0.4
+django-heroku==0.3.1
+docopt==0.6.2
+gunicorn==20.1.0
+idna==3.3
+psycopg2==2.9.3
+requests==2.27.1
+sqlparse==0.4.2
+tzdata==2022.1
+urllib3==1.26.9
+whitenoise==6.0.0
+yarg==0.1.9
