--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,30 @@
-asgiref==3.5.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
-dj-database-url==0.5.0
-Django==4.0.4
+asgiref==3.8.1
+autocommand==2.2.2
+backports.tarfile==1.2.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+dj-database-url==2.3.0
+Django==5.1.4
 django-heroku==0.3.1
 docopt==0.6.2
-gunicorn==20.1.0
-idna==3.3
-psycopg2==2.9.3
-requests==2.27.1
-sqlparse==0.4.2
-tzdata==2022.1
-urllib3==1.26.9
-whitenoise==6.0.0
-yarg==0.1.9
+gunicorn==23.0.0
+idna==3.10
+importlib_metadata==8.5.0
+inflect==7.5.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jaraco.text==4.0.0
+more-itertools==10.5.0
+packaging==24.2
+platformdirs==4.3.6
+psycopg2==2.9.10
+requests==2.32.3
+sqlparse==0.5.3
+tomli==2.2.1
+typeguard==4.4.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.3.0
+whitenoise==6.8.2
+yarg==0.1.10
+zipp==3.21.0
